[tool.poetry]
name = "vastai-client"
description = "Python client for the Vast.ai cloud rent service."
version = "0.1.1"
authors = ["Georgiy Kozhevnikov"]
license = "MIT"


readme = "README.md"

repository = "https://github.com/Barahlush/vastai-client"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.6.0"
dacite = "^1.7.0"

[tool.poetry.group.test.dependencies]
mypy = "^0.982"

wemake-python-styleguide = "^0.17"
doc8 = "^1.0"
nitpick = "^0.32"

safety = "^2.3"

pytest = "^7.1"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5.2"
sphinx-autodoc-typehints = "^1.19"
m2r2 = "^0.3"
tomli = "^2.0"



[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}
ipykernel = {version = "^6.20.2", python = ">=3.8,<4.0"}
types-requests = "^2.28.11.7"
ruff = "^0.0.223"
build = "^0.10.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".eggs",
    "*.egg",
]
ignore = [
    "D100",
    "D104",
    "D106",
    "Q000",
    "D211",
    "D205",
    "D213",
    "E501"
]
line-length = 88
select = [
    "C9",
    "D",
    "E",
    "F",
    "Q",
    "S",
    "W",
]

[tool.ruff.mccabe]
max-complexity = 100

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101"]
"*/__init__.py" = ["ALL"]